@@ -2,61 +2,62 @@ package br.edu.imepac.comum.services;
 
 import br.edu.imepac.comum.dtos.funcionario.FuncionarioDto;
 import br.edu.imepac.comum.dtos.funcionario.FuncionarioRequest;
+import br.edu.imepac.comum.exceptions.NotFoundClinicaMedicaException;
 import br.edu.imepac.comum.models.Funcionario;
 import br.edu.imepac.comum.repositories.FuncionarioRepository;
-import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 public class FuncionarioService {
 
-    private final ModelMapper modelMapper;
-    private final FuncionarioRepository funcionarioRepository;
+    @Autowired
+    private FuncionarioRepository funcionarioRepository;
 
-    public FuncionarioService(ModelMapper modelMapper, FuncionarioRepository funcionarioRepository) {
-        this.modelMapper = modelMapper;
-        this.funcionarioRepository = funcionarioRepository;
-    }
+    @Autowired
+    private ModelMapper modelMapper;
 
     public FuncionarioDto adicionarFuncionario(FuncionarioRequest funcionarioRequest) {
-        log.info("Cadastro de funcionário - service: {}", funcionarioRequest);
+        // Futuramente, aqui entraria a lógica para encriptar a senha
         Funcionario funcionario = modelMapper.map(funcionarioRequest, Funcionario.class);
-        funcionario = funcionarioRepository.save(funcionario);
-        return modelMapper.map(funcionario, FuncionarioDto.class);
+        Funcionario savedFuncionario = funcionarioRepository.save(funcionario);
+        return modelMapper.map(savedFuncionario, FuncionarioDto.class);
     }
 
+    // O seu controller está a passar um DTO aqui. O ideal seria um Request, mas vamos seguir o seu código.
     public FuncionarioDto atualizarFuncionario(Long id, FuncionarioDto funcionarioDto) {
-        log.info("Atualizando funcionário com ID: {}", id);
         Funcionario funcionarioExistente = funcionarioRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Funcionário não encontrado com ID: " + id));
-        modelMapper.map(funcionarioDto, funcionarioExistente);
-        Funcionario funcionarioAtualizado = funcionarioRepository.save(funcionarioExistente);
-        return modelMapper.map(funcionarioAtualizado, FuncionarioDto.class);
+                .orElseThrow(() -> new NotFoundClinicaMedicaException("Funcionário não encontrado"));
+
+        // Mapeia os dados do DTO para a entidade existente, evitando mudar campos sensíveis
+        funcionarioExistente.setNome(funcionarioDto.getNome());
+        funcionarioExistente.setEmail(funcionarioDto.getEmail());
+        // Adicione outros campos que podem ser atualizados
+
+        Funcionario updatedFuncionario = funcionarioRepository.save(funcionarioExistente);
+        return modelMapper.map(updatedFuncionario, FuncionarioDto.class);
     }
 
     public void removerFuncionario(Long id) {
-        log.info("Removendo funcionário com ID: {}", id);
-        Funcionario funcionario = funcionarioRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Funcionário não encontrado com ID: " + id));
-        funcionarioRepository.delete(funcionario);
+        if (!funcionarioRepository.existsById(id)) {
+            throw new NotFoundClinicaMedicaException("Funcionário não encontrado");
+        }
+        funcionarioRepository.deleteById(id);
     }
 
     public FuncionarioDto buscarFuncionarioPorId(Long id) {
-        log.info("Buscando funcionário com ID: {}", id);
         Funcionario funcionario = funcionarioRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Funcionário não encontrado com ID: " + id));
+                .orElseThrow(() -> new NotFoundClinicaMedicaException("Funcionário não encontrado"));
         return modelMapper.map(funcionario, FuncionarioDto.class);
     }
 
     public List<FuncionarioDto> listarFuncionarios() {
-        log.info("Listando todos os funcionários");
-        List<Funcionario> funcionarios = funcionarioRepository.findAll();
-        return funcionarios.stream()
+        return funcionarioRepository.findAll().stream()
                 .map(funcionario -> modelMapper.map(funcionario, FuncionarioDto.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
